--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #00796b;
 }
 
 body {
@@ -47,7 +47,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #00796b;
 }
 button:focus,
 button:focus-visible {
@@ -57,10 +57,11 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #fbfaff;
+    /* here */
   }
   a:hover {
-    color: #747bff;
+    color: #00796b;
   }
   button {
     background-color: #f9f9f9;
